--- a/src/main/resources/templates/group/groupList.html
+++ b/src/main/resources/templates/group/groupList.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css"
           integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" th:href="@{/static/css/my-list-devGroup-item.css}">
+    <link rel="stylesheet" type="text/css" href="/css/my-list-group-item.css">
     <!--<link rel="stylesheet" th:href="@{css/m-list-devGroup-item.css}">-->
     <title>组列表</title>
 </head>
